--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- stylesheet  -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <!-- responsive stylesheet  -->
+    <link rel="stylesheet" href="css/responsive.css">
     <!-- owl cdn  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
@@ -66,7 +68,7 @@
     <section id="banner-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-sm-12 col-12 d-flex ">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex  ">
                     <div class="left-side-style">
                         <h2>Los Angeles Electrical </h2>
                         <p class="We"><span style="color:#F6821E; text-transform: capitalize; font-weight: 400;">We are
@@ -121,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 col-sm-12 col-12 z-index offset-md-1">
+                <div class="col-lg-4  col-md-12 col-sm-12 col-12 z-index offset-lg-1">
                     <div class="right-form">
                         <div class="form-top">
                             <p>call us now.. 8185856123 </p>
@@ -191,8 +193,8 @@
     <section class="s-cards">
         <div class="container">
             <h3 class="heading-style ">we provide professional <br>eiectrical services </h3>
-            <div class="row mt-5">
-                <div class="col-md-4 col-sm-12 col-12">
+            <div class="row mt-lg-5">
+                <div class="col-md-4 col-sm-6 col-12 set-padding-sm set-padding-sm">
                     <div class="card-syle">
                         <div class="img">
                             <img src="images/card.jpg" alt="">
@@ -206,7 +208,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-4 col-sm-12 col-12">
+                <div class="col-md-4 col-sm-6 col-12 set-padding-sm">
                     <div class="card-syle">
                         <div class="img">
                             <img src="images/img-2.jpg" alt="">
@@ -220,7 +222,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-4 col-sm-12 col-12">
+                <div class="col-md-4 col-sm-6 col-12 set-padding-sm">
                     <div class="card-syle">
                         <div class="img">
                             <img src="images/img-3.jpg" alt="">
@@ -274,7 +276,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="images/slide-1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption ">
                         <h5>general electrical cintractors for commercial <br> industrial projects</h5>
                         <p>we are commercial electrical contractors in los angeles</p>
                         <button> Read more</button>
@@ -282,7 +284,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/Group 3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption">
                         <h5>general electrical cintractors for commercial <br> industrial projects</h5>
 
                         <p>we are commercial electrical contractors in los angeles</p>
@@ -291,7 +293,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/slide-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption ">
                         <h5>general electrical cintractors for commercial <br> industrial projects</h5>
 
                         <p>we are commercial electrical contractors in los angeles</p>
@@ -312,7 +314,9 @@
                 electrical
                 services that matters.<br> Here is what they say about us:</p>
             <!-- boxs  -->
-            <div class="owl-carousel owl-theme">
+            <div class="owl-carousel owl-theme" id="c-one">
+
+
                 <div class="item">
                     <div class="box-edit">
                         <div class="img-box">
@@ -331,20 +335,24 @@
                         </div>
                     </div>
                 </div>
+
+
+
                 <div class="item">
                     <div class="box-edit">
                         <div class="img-box">
-                            <img src="images/t-1.png" alt="">
+                            <img src="images/t-2.png" alt="">
                         </div>
                         <div class="text">
-                            <h5>Eli Kitt</h5>
+                            <h5>Carolin Pira</h5>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <p>Great work. Reliable, high quality and always responds to follow up questions. Customer
-                                service is A+++. Highly recommend. Read More
+                            <p>
+                                We had Ronald for few of our electrical projects. He did a great job, so knowledgeable
+                                and professional I am so so happy with the results.. Read More
                             </p>
                         </div>
                     </div>
@@ -353,16 +361,17 @@
                     <div class="box-edit">
                         <div class="img-box">
                             <img src="images/t-1.png" alt="">
+
                         </div>
                         <div class="text">
-                            <h5>Eli Kitt</h5>
+                            <h5>FadyEvents</h5>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <p>Great work. Reliable, high quality and always responds to follow up questions. Customer
-                                service is A+++. Highly recommend. Read More
+                            <p>Ronald with BarinElectrical helped me with my lighting equipment and LED dance floor set
+                                up, installation, and repairs. Ronald is is my go to guy for all... Read More
                             </p>
                         </div>
                     </div>
@@ -376,7 +385,7 @@
     <section class="map-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-sm-12 col-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                     <div class="map-style">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423286.88280506054!2d-118.74138381401502!3d34.02003923646538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sin!4v1687466895404!5m2!1sen!2sin"
@@ -386,7 +395,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-6 col-sm-12 col-12">
+                <div class="col-md-12 col-lg-6 col-sm-12 col-12">
                     <div class="text">
                         <h3>Local Electricians Serving San Fernando Valley and Los Angeles County
                         </h3>
@@ -397,23 +406,23 @@
                         </p>
                         <!-- row  -->
                         <div class="row mt-4">
-                            <div class="col-md-6 col-sm-12 col-12">
+                            <div class="col-md-6 col-sm-6 col-12">
                                 <div class="li-set">
-                                <li>> Agoura Hills</li>
-                                <li> > Calabasas</li>
-                                <li>> Encino</li>
-                                <li>> Los Angeles</li>
-                                <li> > Sherman Oaks</li>
+                                    <li>> Agoura Hills</li>
+                                    <li> > Calabasas</li>
+                                    <li>> Encino</li>
+                                    <li>> Los Angeles</li>
+                                    <li> > Sherman Oaks</li>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-12 col-12">
+                            <div class="col-md-6 col-sm-6 col-12">
                                 <div class="li-set">
-                                <li> Studio City</li>
-                                <li> > Universal City</li>
-                                <li> > West Hills</li>
-                                <li> > West Hollywood</li>
-                                <li> > Woodland Hills</li>
-                            </div>
+                                    <li> Studio City</li>
+                                    <li> > Universal City</li>
+                                    <li> > West Hills</li>
+                                    <li> > West Hollywood</li>
+                                    <li> > Woodland Hills</li>
+                                </div>
                             </div>
 
                         </div>
@@ -428,6 +437,179 @@
 
     </section>
     <!-- ========== End map ========== -->
+
+    <!-- ========== Start electrical work cards ========== -->
+    <section class="work-cards">
+        <div class="container-fluid">
+            <h3 class="heading-style">some of our electrical work</h3>
+            <p class="We-take">We take pride in providing high quality electrician services to residents and small
+                businesses in Los Angeles and San Fernando Valley. Contact us with details about your <br> commercial
+                electrical project or electrical subcontracting needs. Hire a licensed electrical master now.</p>
+            <!-- owl  -->
+            <div class="owl-carousel owl-theme" id="c-two">
+                <div class="item-style">
+                    <div class="card-box ">
+                        <img src="images/c-2.jpg" alt="">
+                    </div>
+                    <div class="overlay">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                </div>
+                <div class="item-style">
+                    <div class="card-box ">
+                        <img src="images/c-3.jpg" alt="">
+                    </div>
+                    <div class="overlay">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                </div>
+                <div class="item-style">
+                    <div class="card-box ">
+                        <img src="images/c-4.jpg" alt="">
+                    </div>
+                    <div class="overlay">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                </div>
+                <div class="item-style">
+                    <div class="card-box ">
+                        <img src="images/c-5.jpg" alt="">
+                    </div>
+                    <div class="overlay">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                </div>
+                <div class="item-style">
+                    <div class="card-box ">
+                        <img src="images/c-6.jpg" alt="">
+                    </div>
+                    <div class="overlay">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- ========== End  electrical work cards ========== -->
+
+    <!-- ========== Start foooter ========== -->
+    <footer>
+        <div class="container">
+            <div class="bg-color">
+                <div class="row">
+                    <div class="col-md-4  ">
+                        <div class="style set-border">
+                            <div class="icons">
+                                <i class="fa-solid fa-font-awesome"></i>
+                            </div>
+                            <div class="text">
+                                <span>you us</span>
+                                <p class="box-one">Lorem ipsum, . Aperiam, nihil?</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-md-4 ">
+                        <div class="style set-border">
+                            <div class="icon">
+                                <i class="fa-regular fa-envelope"></i>
+                            </div>
+                            <div class="text">
+                                <span> mail us</span>
+                                <p class="box-one">giratan966@akoption.com</p>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <div class="style ">
+                            <div class="icon">
+                                <i class="fa-solid fa-tty"></i>
+                            </div>
+                            <div class="text">
+                                <span> call us</span>
+                                <p class="box-one">8185856123</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- bg-color close  -->
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 col-12  ">
+                    <div class="logo">
+                        <a class="navbar-brand" href="#">Barin <span class="Electrical">Electrical</span></a>
+                        <p class="f-p">Lorem d amet, sit consectetur adipisicing elit. Necessitatibus, officiis.</p>
+                        <div class="icon">
+                            <a href="#"> <i class="fa-brands fa-facebook"></i>
+                                <a href="#"> <i class="fa-brands fa-instagram"></i></a>
+                                <a href="#"> <i class="fa-brands fa-twitter"></i></a>
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+
+                <div class="col-lg-3 col-md-6 col-sm-12 col-12   set-the-padding ">
+                    <div class="menu">
+                        <h2>menu</h2>
+                        <li><a href="#"> home</a></li>
+                        <li><a href="#"> about us</a></li>
+                        <li><a href="#">electrical services </a></li>
+                        <li><a href="#"> areas servies</a></li>
+                        <li><a href="#"> contact us</a></li>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 col-12 ">
+                    <div class="menu">
+                        <h2>servies</h2>
+                        <li><a href="#"> Loaded Electricity </a></li>
+                        <li><a href="#"> Place Power</a></li>
+                        <li><a href="#">Wire Cutters </a></li>
+                        <li><a href="#"> HighBar Electricals</a></li>
+                        <li><a href="#">Power Market </a></li>
+
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 col-12 ">
+                    <div class="menu">
+                        <h2>Newsletter</h2>
+                        <form action="">
+                            <div class="input-group mb-3 form-style">
+                                <input type="text" class="" placeholder="enter the mail"
+                                    aria-label="Amount (to the nearest dollar)">
+                                <span class="input-group-text"><img src="images/send.png" alt=""></span>
+                            </div>
+                            <div class="set-input">
+                                <input type="checkbox" name="" id="" class="checkbox">
+                                <span class="I-agree">I agree to all your terms and policies</span>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+
+        </div>
+
+        </div>
+    </footer>
+    <!-- ========== End foooter ========== -->
     <!-- js file  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
@@ -437,7 +619,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script>
-        $('.owl-carousel').owlCarousel({
+        $('#c-one').owlCarousel({
             loop: true,
             margin: 45,
             nav: true,
@@ -450,6 +632,25 @@
                 },
                 1000: {
                     items: 2
+                }
+            }
+        })
+    </script>
+
+    <script>
+        $('#c-two').owlCarousel({
+            loop: true,
+            margin: 30,
+            nav: true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 3
+                },
+                1000: {
+                    items: 5
                 }
             }
         })
