--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="banner-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex  ">
+                <div class="col-lg-7 col-md-12 col-sm-12 col-12 d-flex  ">
                     <div class="left-side-style">
                         <h2>Los Angeles Electrical </h2>
                         <p class="We"><span style="color:#F6821E; text-transform: capitalize; font-weight: 400;">We are
@@ -88,24 +88,23 @@
                             <div class="col-md-7 col-sm-12 col-12 ">
                                 <div class="right-text">
                                     <li>
-                                        <i class="fa-solid fa-caret-right"></i>
-                                        Lorem ipsum sit amet, consectetur !
+                                        Indoor and outdoor lighting Fixture wiring and Installation
                                     </li>
                                     <li>
-                                        <i class="fa-solid fa-caret-right"></i>
-                                        Lorem ipsum dolor sit amet, !
+                                        Commercial electrical circuit breaker installation
+                                        Small business electrical meter and main panel upgrade
                                     </li>
                                     <li>
-                                        <i class="fa-solid fa-caret-right"></i>
-                                        Lorem ipsum dolor sit amet, consectetur !
+                                        Assembly line controller room setup and programming
                                     </li>
                                     <li>
-                                        <i class="fa-solid fa-caret-right"></i>
-                                        Lorem ipsum dolor sit amet, !
+                                        Assembly line setup and wiring.
+                                        PLC programming and industrial automation setup
+                                        Factory machinery and commercial equipment control panel installation
                                     </li>
                                     <li>
-                                        <i class="fa-solid fa-caret-right"></i>
-                                        Lorem ipsum dolor sit amet, consectetur !
+                                        Assembly line controller room setup and programming
+
                                     </li>
 
 
@@ -152,6 +151,45 @@
     </section>
     <!-- ========== End banner ========== -->
 
+
+    <!-- ========== Start learn more about us  ========== -->
+    <section class="learn-about">
+        <div class="container">
+            <h3 class="learn-more">Learn more about residential and commercial code compliant electrical system wiring
+                and service estimates now.</h3>
+            <p class="Get-a">Get a free estimate from a master electrician now. </p>
+            <p class="HOUR"> 24 HOUR EMERGENCY CONTACT NUMBER : <span class="number">818-585-6123.</span></p>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+                    <div class="img">
+                        <img src="images/1.jpg" alt="">
+                    </div>
+
+                </div>
+
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-flex align-items-center">
+                    <div class="text">
+                        <h3 class="Hire">Hire a licensed contractor for indoor & outdoor electrical system installation.
+                        </h3>
+                        <p class="We-install">We install lighting and comply with California Title 24 Building Energy
+                            Efficiency Standards. We install exit signs with battery backup and emergency lights plus
+                            security systems for your manufactures or office. </p>
+
+                        <p class="We-install"> Get electrical wiring services for a new construction. We bring power and
+                            data into your
+                            smart home or building. Enjoy safety, security and comfort at your business. We connect your
+                            machines and equipment to your network</p>
+                        <button class="Learn"> Learn More</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- ========== End learn more about us  ========== -->
+
     <!-- ========== Start section two about us  ========== -->
     <section id="about-us">
         <div class="container">
@@ -189,10 +227,84 @@
     </section>
     <!-- ========== End section two about us  ========== -->
 
+
+    <!-- ========== Start Commercial cards ========== -->
+    <section class="commercial-cards">
+        <div class="container">
+            <h3 class="heading-style text-center">Commercial Electrical Contractors.
+            </h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
+                    <div class="cards-style">
+                        <div class="img-icon">
+                            <img src="images/watch.png" alt="">
+                        </div>
+                        <div class="text">
+                            <p>Our commitment to companies, factories and small business is the reason why we provide
+                                our 24 hour emergency electrical repair services. We are available when your electric
+                                gate is down and when you are having problems with parking lot lighting.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12  ">
+                    <div class="cards-style">
+                        <div class="img-icon">
+                            <img src="images/icon-1.png" alt="">
+                        </div>
+                        <div class="text">
+                            <p>Our commitment to companies, factories and small business is the reason why we provide
+                                our 24 hour emergency electrical repair services. We are available when your electric
+                                gate is down and when you are having problems with parking lot lighting.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12  ">
+                    <div class="cards-style">
+                        <div class="img-icon">
+                            <img src="images/icon-2.png" alt="">
+
+                        </div>
+                        <div class="text">
+                            <p>Our commitment to companies, factories and small business is the reason why we provide
+                                our 24 hour emergency electrical repair services. We are available when your electric
+                                gate is down and when you are having problems with parking lot lighting.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 col-12  ">
+                    <div class="cards-style">
+                        <div class="img-icon">
+                            <img src="images/icon-3.png" alt="">
+
+                        </div>
+                        <div class="text">
+                            <p>Our commitment to companies, factories and small business is the reason why we provide
+                                our 24 hour emergency electrical repair services. We are available when your electric
+                                gate is down and when you are having problems with parking lot lighting.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <!-- ========== End Commercial cards ========== -->
+
+
     <!-- ========== Start services ========== -->
     <section class="s-cards">
         <div class="container">
-            <h3 class="heading-style ">we provide professional <br>eiectrical services </h3>
+            <h3 class="provide">We provide commercial electrical troubleshooting and repair services to Los
+                Angeles small businesses, parking lots and commercial buildings.</h3>
             <div class="row mt-lg-5">
                 <div class="col-md-4 col-sm-6 col-12 set-padding-sm set-padding-sm">
                     <div class="card-syle">
@@ -581,7 +693,7 @@
 
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-12 col-12 ">
+                <div class="col-lg-3 col-md-6 col-sm-12 col-12 p-0">
                     <div class="menu">
                         <h2>Newsletter</h2>
                         <form action="">
